--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -20,11 +20,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Set Configmap
+        env:
+          CONFIGMAP_FILE_PATH: configmap.json
         id: set-configmap
         run: |
-          jq . config.json
-          jq -c . config.json
-          echo "::set-output name=configmap::$(jq -c . config.json)"
+          jq . ${CONFIGMAP_FILE_PATH}
+          jq -c . ${CONFIGMAP_FILE_PATH}
+          echo "::set-output name=configmap::$(jq -c . ${CONFIGMAP_FILE_PATH})"
       - name: Export Configmap
         continue-on-error: true # Allow failure, a status update will be sent to source repo
         with:
