--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -16,6 +16,7 @@ on:
 jobs:
   prepare:
     runs-on: ubuntu-20.04
+    if: ${{ always() }}
     name: Test ${{ github.event.inputs.src_repository }}
     steps:
       - uses: actions/checkout@v2
@@ -42,6 +43,7 @@ jobs:
 
   test:
     runs-on: ubuntu-20.04
+    if: ${{ always() }}
     name: Test ${{ matrix.configmap.DEPLOYMENT_ENVIRONMENT }}
     ### Add the following block to each job
     ### -----------------------------------------------------
