added missing runs on

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -70,6 +70,7 @@ jobs:
 
   deploy:
     # Test secrets
+    runs-on: ubuntu-20.04
     name: Deploy to ${{ needs.prepare.outputs.CONFIGMAP_SELECTED_KEY }}
     if: ${{ always() }}
     ### Add the following condition to skip deployments for non-environment branches
